--- a/app/views/app-config/partials/forms/lga-profile.html
+++ b/app/views/app-config/partials/forms/lga-profile.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title" i18n="selectZones"></h4>
+      <h4 class="panel-title" translate>Select zones</h4>
     </div>
     <div class="panel-body"></div>
       <div class="list-group" ng-repeat="zone in zones">
@@ -24,7 +24,7 @@
 <div class="col-md-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title" i18n="selectNearbyLgas"></h4>
+      <h4 class="panel-title" translate>Select Nearby LGAs</h4>
     </div>
     <div ng-include="'views/partials/search.html'"></div>
     <div class="panel-body"></div>
