--- a/app/views/app-config/partials/forms/product-profile.html
+++ b/app/views/app-config/partials/forms/product-profile.html
@@ -2,7 +2,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title" i18n="selectFacilityProductProfiles"></h4>
+      <h4 class="panel-title" translate>Select facility stock list</h4>
     </div>
     <div ng-include="'views/partials/search.html'"></div>
     <div class="panel-body"></div>
