--- a/app/views/bundles/log-incoming.html
+++ b/app/views/bundles/log-incoming.html
@@ -18,7 +18,7 @@
                         class="btn btn-primary btn-md"
                         ng-click="addNewLine()">
                     <i class="fa fa-plus"></i>
-                    <span i18n="addStockItem"></span>
+                    <span translate>Add Another Stock Item</span>
                 </button>
             </div>
             <br/><br/>
@@ -28,7 +28,7 @@
                         class="btn btn-success btn-lg btn-block"
                         ng-disabled="bundleLineForm.$invalid"
                         ng-click="preview()">
-                     <span i18n="save"></span>
+                     <span translate>Save</span>
                      <i class="fa fa-save"></i>
                 </button>
             </div>
