--- a/app/views/bundles/partials/bundle-line.html
+++ b/app/views/bundles/partials/bundle-line.html
@@ -22,7 +22,7 @@
 </div>
 <br/>
 <div class="col-sm-12">
-    <label i18n="batchNo"></label>
+    <label translate>Batch No</label>
     <input class="form-control"
            type="text"
            name="batchNo$index"
