--- a/app/views/bundles/partials/facility/add-new-facility.html
+++ b/app/views/bundles/partials/facility/add-new-facility.html
@@ -32,6 +32,6 @@
         </option>
     </select>
     <span  ng-show="selectFacilityError == true"
-           class="help-block custom-error" i18n="selectFacilityError"></span>
+           class="help-block custom-error" translate>Please, select facility</span>
 </div>
 <br/>
