--- a/app/views/dashboard/dashboard.html
+++ b/app/views/dashboard/dashboard.html
@@ -3,7 +3,7 @@
   <div class="panel panel-default">
     <div class="container-fluid">
         <div class="product-chart">
-          <h4 class="text-center" i18n="stockLevel"></h4>
+          <h4 class="text-center" translate>Stock Levels</h4>
           <div class="center-text" ng-hide="productTypesChart">
           <i class="fa fa-refresh fa-spin"></i>
         </div>
