--- a/app/views/home/control-panel.html
+++ b/app/views/home/control-panel.html
@@ -2,63 +2,63 @@
 
   <accordion-group>
     <accordion-heading>
-      <i class="fa  fa-suitcase"></i>
-      <span i18n="product"></span>
+      <i class="fa fa-suitcase"></i>
+      <span translate>Product</span>
     </accordion-heading>
     <ul>
-      <li><a ui-sref="batchListView" i18n="viewBatch"></a></li>
-      <li><a ui-sref="productTypeListView" i18n="viewProductTypes"></a></li>
-      <li><a href="">Manage unit of measurement</a></li>
-      <li><a ui-sref="addBatchView">Add batch</a></li>
+      <li><a ui-sref="batchListView" translate>View batch list</a></li>
+      <li><a ui-sref="productTypeListView" translate>View product types</a></li>
+      <li><a href="" translate>Manage unit of measurement</a></li>
+      <li><a ui-sref="addBatchView" translate>Add batch</a></li>
     </ul>
   </accordion-group>
 
   <accordion-group>
     <accordion-heading>
       <i class="fa fa-chevron-down"></i>
-      <span i18n="incoming"></span>
+      <span translate>Incoming</span>
     </accordion-heading>
     <ul>
-      <li><a ui-sref="incomingLog" i18n="incomingLog"></a></li>
+      <li><a ui-sref="incomingLog" translate>Log an incoming bundle</a></li>
       <li>
         <a ui-sref="home.index.home.mainActivity.orderType"
-           i18n="incomingPlace"></a>
+           translate>Place an order</a>
       </li>
-      <li><a href="" i18n="incomingModify"></a></li>
-      <li><a href="" i18n="incomingTrackPending"></a></li>
-      <li><a href="" i18n="incomingTrackIncoming"></a></li>
-      <li><a href="#/orders/index" i18n="incomingOrders"></a></li>
+      <li><a href="" translate>Modify an order</a></li>
+      <li><a href="" translate>Track pending orders</a></li>
+      <li><a href="" translate>Track incoming orders</a></li>
+      <li><a href="#/orders/index" translate>View received orders</a></li>
     </ul>
   </accordion-group>
 
   <accordion-group>
     <accordion-heading>
       <span><i class="fa fa-chevron-up"></i></span>
-      <span>Outgoing</span>
+      <span translate>Outgoing</span>
     </accordion-heading>
     <ul>
-      <li><a href="">Process an order</a></li>
-      <li><a href="">Return a shipment</a></li>
-      <li><a href="">Calculate routes</a></li>
-      <li><a href="">Track pending shipments</a></li>
-      <li><a href="">Track outgoing shipments</a></li>
-      <li><a href="#/deliveries/index">View delivered shipments</a></li>
+      <li><a href="" translate>Process an order</a></li>
+      <li><a href="" translate>Return a shipment</a></li>
+      <li><a href="" translate>Calculate routes</a></li>
+      <li><a href="" translate>Track pending shipments</a></li>
+      <li><a href="" translate>Track outgoing shipments</a></li>
+      <li><a href="#/deliveries/index" translate>View delivered shipments</a></li>
     </ul>
   </accordion-group>
 
   <accordion-group>
     <accordion-heading>
       <span><i class="fa fa-list"></i></span>
-      <span>Inventory</span>
+      <span translate>Inventory</span>
     </accordion-heading>
     <ul>
-      <li><a ui-sref="inventoryListView" i18n="manageInventory"></a></li>
-      <li><a href="">View forecasts</a></li>
-      <li><a href="">Track performance</a></li>
-      <li><a ui-sref="stockCountIndex">View Stock Count</a></li>
-      <li><a href="">View sub-facility inventories</a></li>
-      <li><a href="">View sub-facility forecasts</a></li>
-      <li><a href="">View sub-facility reports</a></li>
+      <li><a ui-sref="inventoryListView" translate>Manage Inventory</a></li>
+      <li><a href="" translate>View forecasts</a></li>
+      <li><a href="" translate>Track performance</a></li>
+      <li><a ui-sref="stockCountIndex" translate>View Stock Count</a></li>
+      <li><a href="" translate>View sub-facility inventories</a></li>
+      <li><a href="" translate>View sub-facility forecasts</a></li>
+      <li><a href="" translate>View sub-facility reports</a></li>
     </ul>
   </accordion-group>
 
