--- a/app/views/home/dashboard/table.html
+++ b/app/views/home/dashboard/table.html
@@ -7,27 +7,27 @@
       <div class="panel-body">
 
         <dl class="dl-horizontal">
-          <dt i18n="actual"></dt>
+          <dt translate>Actual</dt>
           <dd>-1</dd>
         </dl>
 
-        <h4 i18n="inventoryRules"></h4>
+        <h4 translate>Inventory Rules</h4>
         <dl class="dl-horizontal">
-          <dt i18n="setServiceLevel"></dt>
+          <dt translate>Set Service Level</dt>
           <dd ng-bind="product.serviceLevel"></dd>
-          <dt i18n="setMaximumLevel"></dt>
+          <dt translate>Set Maximum Level</dt>
           <dd ng-bind="product._max"></dd>
         </dl>
 
-        <h4 i18n="inventoryPerformance"></h4>
+        <h4 translate>Inventory Performance</h4>
         <dl class="dl-horizontal">
-          <dt i18n="leadTimeConsumption"></dt>
+          <dt translate>Lead-time Consumption</dt>
           <dd>-1</dd>
-          <dt i18n="bufferStock"></dt>
+          <dt translate>Buffer Stock</dt>
           <dd ng-bind="product.buffer"></dd>
-          <dt i18n="reorderPoint"></dt>
+          <dt translate>Reorder Point</dt>
           <dd>-1</dd>
-          <dt i18n="discrepancyThreshold"></dt>
+          <dt translate>Discrepancy Threshold</dt>
           <dd>-1</dd>
         </dl>
 
