--- a/app/views/home/partials/discard-count-reminder.html
+++ b/app/views/home/partials/discard-count-reminder.html
@@ -2,7 +2,7 @@
   <a ga-click="discard_count_form" ui-sref="discardCountForm">
     <div class="col-md-12 alert alert-warning">
       <img src="images/dashboard-icons/add-waste-count.png" class="img-rounded"/>
-      <strong><span i18n="discardCountReminderMsg"></span></strong>
+      <strong><span translate>Discard count</span></strong>
     </div>
   </a>
 </div>
