--- a/app/views/index/header.html
+++ b/app/views/index/header.html
@@ -3,7 +3,7 @@
     <div class="container">
       <a ui-sref="home.index.home.mainActivity" ga-click="LoMIS" class="navbar-brand">
         <span class="fa fa-home"></span>
-        <span i18n="appName"></span>
+        <span>LoMIS</span>
       </a>
       <ul class="nav navbar-nav pull-right">
         <li>
