--- a/app/views/index/loading-fixture-screen.html
+++ b/app/views/index/loading-fixture-screen.html
@@ -18,7 +18,7 @@
   </div>
   <div class="row">
     <div class="col-md-12 center-text">
-      <span i18n="loading"></span>
+      <span translate>Loading</span>
     </div>
   </div>
 </div>
