--- a/app/views/index/migration-screen.html
+++ b/app/views/index/migration-screen.html
@@ -18,7 +18,7 @@
   </div>
   <div class="row">
     <div class="col-md-12 center-text">
-      <span i18n="migrating"></span>
+      <span translate>Your app is updating.</span>
     </div>
   </div>
 </div>
