--- a/app/views/inventory/index.html
+++ b/app/views/inventory/index.html
@@ -3,13 +3,13 @@
     <div class="btn-group col-sm-2">
       <a ui-sref="addInventory" ga-click="add_inventory" class="btn btn-default">
         <span><i class="fa fa-plus"></i></span>
-        <span i18n="addNewInventory"></span>
+        <span translate>Add New Inventory</span>
       </a>
     </div>
     <div class="btn-group col-sm-2">
       <a ui-sref="incomingLog" ga-click="incoming_log" class="btn btn-default">
         <span><i class="fa fa-plus"></i></span>
-        <span i18n="incomingLog"></span>
+        <span translate>Log an incoming bundle</span>
       </a>
     </div>
   </div>
