--- a/app/views/notification-service/confirm-dialog.html
+++ b/app/views/notification-service/confirm-dialog.html
@@ -1,7 +1,7 @@
 <div class="modal-header alert-danger">
   <span ng-hide="headerMessage === ''" ng-bind="headerMessage"></span>
   <span ng-show="headerMessage === ''">
-    <span i18n="confirmStockOutHeader2"></span>
+    <span translate>Confirm stock-out broadcast for the following:</span>
   </span>
   <span class="pull-right" ng-click="cancel(dismissMessage)">
     <i class="fa fa-times"></i>
