--- a/app/views/product-types/product-types-list.html
+++ b/app/views/product-types/product-types-list.html
@@ -2,7 +2,7 @@
   <div class="btn-group col-sm-2">
     <a ga-click="add_product_type" ui-sref="addProductTypeView" class="btn btn-default">
       <span><i class="fa fa-plus"></i></span>
-      <span i18n="addProductType"></span>
+      <span translate>Add Product Type</span>
     </a>
   </div>
 </div>
@@ -19,7 +19,7 @@
       <div class="panel-heading">
         <h4 class="panel-title text-titlecase">
           <span><i class="fa fa-list"></i></span>
-          <span i18n="productTypes"></span></i>
+          <span translate>Product Types</span>
         </h4>
       </div>
       <div class="scrollable-container">
