--- a/app/views/waste-count/waste-count.html
+++ b/app/views/waste-count/waste-count.html
@@ -7,7 +7,7 @@
       <div class="col-sm-12">
         <a class="btn btn-default" ui-sref="wasteCountForm">
             <i class="fa fa-plus"></i>
-            <span i18n="add"></span>
+            <span translate>Add</span>
         </a>
       </div>
     </div>
