--- a/app/views/app-config/welcome-page.html
+++ b/app/views/app-config/welcome-page.html
@@ -1,11 +1,11 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title" i18n="appConfigWelcomeMsg"></h4>
+    <h4 class="panel-title" translate>Welcome to LoMIS</h4>
   </div>
   <div class="panel-body">
     <div class="row">
       <div class="col-sm-12">
-        <span i18n="welcomeMsgBody"></span>
+        <span translate>Please take a few minutes to tell us about your facility.</span>
       </div>
     </div>
     <div class="panel-body"></div>
@@ -13,9 +13,9 @@
       <div class="col-xs-4">
         <a ui-sref="appConfig.wizard" ga-click="welcome" class="btn btn-success btn-lg" ng-click="loadingDeviceInfo = true"
            ng-disabled="loadingDeviceInfo">
-          <span ng-show="!loadingDeviceInfo" i18n="continue"></span>
+          <span ng-show="!loadingDeviceInfo" translate>Continue</span>
           <span ng-show="!loadingDeviceInfo"><i class="fa fa-arrow-circle-right"></i></span>
-          <span ng-show="loadingDeviceInfo" i18n="loading"></span>
+          <span ng-show="loadingDeviceInfo" translate>Loading</span>
           <span ng-show="loadingDeviceInfo"><i class="fa fa-spinner fa-spin"></i></span>
         </a>
       </div>
