--- a/app/views/app-config/wizard/partials/email-setup.html
+++ b/app/views/app-config/wizard/partials/email-setup.html
@@ -1,14 +1,14 @@
 <div class="row" ng-show="profileNotFound === true">
   <div class="col-md-12">
     <div class="alert alert-danger">
-      <span i18n="profileLoadingErrorMsg"></span>
+      <span translate>Profile does not exist, please make sure you entered the correct email address and check your internet connection</span>
       <span><i class="fa fa-exclamation"></i></span>
     </div>
   </div>
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title" i18n="emailConfiguration"></h4>
+    <h4 class="panel-title" translate>Email Configuration</h4>
   </div>
 </div>
 <div class="col-sm-15">
@@ -18,12 +18,12 @@
 
     <div class="col-md-6">
       <div class="form-group" ng-class="{ 'has-error': (editAppConfigForm.email).$invalid && isSubmitted }">
-        <label for="email" i18n="email"></label>
+        <label for="email" translate>Email</label>
         <input type="email" class="form-control" ng-model="appConfig.uuid" name="email"
                id="email" required/>
-            <span class="alert-danger form-control" i18n="contactPersonEmailErrorMsg"
-                  ng-show="(editAppConfigForm.email).$invalid && isSubmitted">
-            </span>
+            <span class="alert-danger form-control" translate
+              ng-show="(editAppConfigForm.email).$invalid && isSubmitted"
+            >Please enter valid email address</span>
       </div>
     </div>
     <div ng-include="'views/app-config/wizard/partials/sequence-map.html'"></div>
@@ -33,14 +33,14 @@
       <div class="btn-group">
         <a ui-sref="appConfigWelcome" ga-click="app_config_welcome" class="btn btn-default btn-lg btn-left">
           <span><i class="fa fa-arrow-circle-left"></i></span>
-          <span i18n="back"></span>
+          <span translate>Back</span>
         </a>
       </div>
       <div class="btn-group">
         <button type="submit" ga-click="email_submit" class="btn btn-success btn-lg btn-right" ng-disabled="disableBtn" ng-click="isSubmitted = true">
-          <span ng-show="!disableBtn" i18n="continue"></span>
+          <span ng-show="!disableBtn" translate>Continue</span>
           <span ng-show="!disableBtn"><i class="fa fa-arrow-circle-right"></i></span>
-          <span ng-show="disableBtn" i18n="loading"></span>
+          <span ng-show="disableBtn" translate>Loading</span>
           <span ng-show="disableBtn"><i class="fa fa-spinner fa-spin"></i></span>
         </button>
       </div>
