--- a/app/views/app-config/wizard/partials/facility-cce-profile-setup.html
+++ b/app/views/app-config/wizard/partials/facility-cce-profile-setup.html
@@ -10,13 +10,13 @@
                 <button ga-click="facility_setup" type="button" class="btn btn-default btn-lg btn-left"
                         ng-click="moveTo(STEP_FOUR)">
                     <span><i class="fa fa-arrow-circle-left"></i></span>
-                    <span i18n="back"></span>
+                    <span translate>Back</span>
                 </button>
             </div>
             <div class="btn-group">
                 <button type="submit" ga-click="sequence_map" class="btn btn-success btn-lg btn-right"
                         ng-click="moveTo(STEP_SIX)">
-                    <span i18n="continue"></span>
+                    <span translate>Continue</span>
                     <span><i class="fa fa-arrow-circle-right"></i></span>
                 </button>
             </div>
