--- a/app/views/app-config/wizard/partials/facility-contact-person.html
+++ b/app/views/app-config/wizard/partials/facility-contact-person.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title" i18n="contactPersonInfo"></h4>
+    <h4 class="panel-title" translate>Contact person info</h4>
   </div>
 </div>
 
@@ -18,12 +18,12 @@
           <div class="btn-group">
             <button type="button" ga-click="contact_person" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_TWO)">
               <span><i class="fa fa-arrow-circle-left"></i></span>
-              <span i18n="back"></span>
+              <span translate>Back</span>
             </button>
           </div>
           <div class="btn-group">
             <button type="submit" ga-click="facility" class="btn btn-success btn-lg btn-right" ng-click="isSubmitted = true">
-              <span i18n="continue"></span>
+              <span translate>Continue</span>
               <span><i class="fa fa-arrow-circle-right"></i></span>
             </button>
           </div>
