--- a/app/views/app-config/wizard/partials/facility-info.html
+++ b/app/views/app-config/wizard/partials/facility-info.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title" i18n="facilityInfo"></h4>
+    <h4 class="panel-title" translate>Facility info</h4>
   </div>
 </div>
 
@@ -17,12 +17,12 @@
       <div class="btn-group">
         <button type="button" ga-click="favility_info" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_ONE)">
           <span><i class="fa fa-arrow-circle-left"></i></span>
-          <span i18n="back"></span>
+          <span translate>Back</span>
         </button>
       </div>
       <div class="btn-group">
         <button type="submit" ga-click="sequence_map" class="btn btn-success btn-lg btn-right" ng-click="isSubmitted = true">
-          <span i18n="continue"></span>
+          <span translate>Continue</span>
           <span><i class="fa fa-arrow-circle-right"></i></span>
         </button>
       </div>
