--- a/app/views/app-config/wizard/partials/facility-product-profile.html
+++ b/app/views/app-config/wizard/partials/facility-product-profile.html
@@ -9,12 +9,12 @@
       <div class="btn-group">
         <button type="button" ga-click="product_profile" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_THREE)">
           <span><i class="fa fa-arrow-circle-left"></i></span>
-          <span i18n="back"></span>
+          <span translate>Back</span>
         </button>
       </div>
       <div class="btn-group">
         <button type="submit" ga-click="sequence_map" class="btn btn-success btn-lg btn-right" ng-click="moveTo(STEP_FIVE)">
-          <span i18n="continue"></span>
+          <span translate>Continue</span>
           <span><i class="fa fa-arrow-circle-right"></i></span>
         </button>
       </div>
