--- a/app/views/app-config/wizard/partials/nearby-lga-setup.html
+++ b/app/views/app-config/wizard/partials/nearby-lga-setup.html
@@ -9,14 +9,14 @@
           <div class="btn-group">
             <button ga-click="facility_setup" type="button" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_FIVE)">
               <span><i class="fa fa-arrow-circle-left"></i></span>
-              <span i18n="back"></span>
+              <span translate>Back</span>
             </button>
           </div>
           <div class="btn-group">
             <button type="submit" ga-click="ccu_setup" class="btn btn-success btn-lg btn-right" ng-click="save()" ng-disabled="isSaving">
-              <span ng-if="!isSaving" i18n="save"></span>
+              <span ng-if="!isSaving" translate>Save</span>
               <span ng-if="!isSaving"><i class="fa fa-floppy-o"></i></i></span>
-              <span ng-if="isSaving" i18n="saving"></span>
+              <span ng-if="isSaving" translate>Saving</span>
               <span ng-if="isSaving"><i class="fa fa-spinner fa-spin"></i></span>
             </button>
           </div>
