--- a/app/views/bundles/index.html
+++ b/app/views/bundles/index.html
@@ -8,7 +8,7 @@
             <div class="col-sm-12">
                 <a class="btn btn-lg btn-default btn-block" ng-click="showLogBundleForm()">
                     <i class="fa fa-plus"></i>
-                    <span i18n="add"></span>
+                    <span translate>Add</span>
                 </a>
                 <br/>
             </div>
@@ -20,8 +20,8 @@
                     <tr>
                         <th class="text-center">#</th>
                         <th class="text-center" ng-bind="facilityHeader"></th>
-                        <th class="text-center" i18n="date"></th>
-                        <th class="text-center" i18n="synced"></th>
+                        <th class="text-center" translate>Date</th>
+                        <th class="text-center" translate>Synced</th>
                     </tr>
                     </thead>
                     <tbody>
