--- a/app/views/bundles/partials/preview-log-bundle.html
+++ b/app/views/bundles/partials/preview-log-bundle.html
@@ -49,12 +49,12 @@
             <div class="btn-group">
                 <button type="button" class="btn btn-lg btn-default" ng-click="showForm()">
                     <i class="fa fa-chevron-circle-left"></i>
-                    <span i18n="back"></span>
+                    <span translate>Back</span>
                 </button>
             </div>
             <div class="btn-group">
                 <button class="btn btn-success btn-lg" ng-click="finalSave()" ng-disabled="isSaving">
-                    <span i18n="confirm" ng-show="!isSaving"></span>
+                    <span translate ng-show="!isSaving">Confirm</span>
                     <span ng-show="isSaving">Saving</span>
                     <span><i class="fa " ng-class="{'fa-save':!isSaving, 'fa-spinner fa-spin': isSaving}"></i></span>
                 </button>
@@ -66,7 +66,7 @@
                     class="btn btn-lg btn-default btn-block"
                     ng-click="hidePreview()">
                 <i class="fa fa-chevron-circle-left"></i>
-                <span i18n="back"></span>
+                <span translate>Back</span>
             </button>
             <br/>
         </div>
