--- a/app/views/home/dashboard.html
+++ b/app/views/home/dashboard.html
@@ -1,9 +1,9 @@
 <div ng-if="productsUnset">
   <div class="alert alert-warning">
-    <span i18n="productsUnset"></span>
+    <span translate>Product settings are unset, please define them</span>
     <a ga-click="home_settings_facility" ui-sref="home.index.settings.facility" class="alert-link"
-      i18n="inventorySettings">
-    </a>
+      translate
+    >Inventory settings</a>
   </div>
 </div>
 <div ui-view="chart"></div>
