--- a/app/views/home/main-activity.html
+++ b/app/views/home/main-activity.html
@@ -2,48 +2,48 @@
     <accordion-group is-open="openMain">
         <accordion-heading>
             <span><i class="fa fa-user"></i></span>
-            <span i18n="mainActivities"></span>
+            <span translate>Main Activities</span>
         </accordion-heading>
 
         <div class="col-md-3 col-xs-6 btn">
             <a ga-click="stock_count" ui-sref="stockCountHome" id="t2">
                 <img src="images/dashboard-icons/stock-count.png" class="img-rounded">
-                <span i18n="stockCount" class="main-activity-link"></span>
+                <span translate class="main-activity-link">Stock Count</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
             <a ga-click="discard_count_home" ui-sref="wasteCountHome">
                 <img src="images/dashboard-icons/add-waste-count.png" class="img-rounded">
-                <span i18n="addWasteCount" class="main-activity-link"></span>
+                <span translate class="main-activity-link">Waste Count</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
             <a ga-click="stock_out_alert" ui-sref="broadcastStockOut">
                 <img src="images/dashboard-icons/stock-out-broadcast.png" class="img-rounded">
-                <span i18n="stockOutBroadcast" class="main-activity-link"></span>
+                <span translate class="main-activity-link">Stock-out Alert</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
             <a ga-click="report_ccu_breakdown" ui-sref="reportCcuBreakdown">
                 <img src="images/dashboard-icons/ccu-breakdown.png" class="img-rounded">
-                <span i18n="ccuBreakdown" class="main-activity-link"></span>
+                <span translate class="main-activity-link">CCU Breakdown</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
             <a ui-sref="logBundleHome({ type: 0 })">
                 <img src="images/dashboard-icons/log-incoming-bundle.png" class="img-rounded">
-                <span i18n="incomingDelivery" class="main-activity-link"></span>
+                <span translate class="main-activity-link">Incoming Delivery</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
             <a ui-sref="logBundleHome({ type: 1 })">
                 <img src="images/dashboard-icons/log-outgoing-bundle.png" class="img-rounded">
-                <span i18n="outGoingDelivery" class="main-activity-link"></span>
+                <span translate class="main-activity-link">Outgoing Delivery</span>
             </a>
         </div>
 
@@ -52,20 +52,20 @@
     <accordion-group>
         <accordion-heading>
             <span><i class="fa fa-tasks"></i></span>
-            <span i18n="more"></span>
+            <span translate>More</span>
         </accordion-heading>
 
         <div class="col-md-3 col-xs-6 btn">
             <a ga-click="app_config" ui-sref="appConfig.edit">
                 <img src="images/dashboard-icons/app-config.png" class="img-rounded">
-                <span i18n="appConfig" class="main-activity-link"></span>
+                <span translate class="main-activity-link">App Config</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn" ng-disabled="!developerMode">
             <a ui-sref="clearStorage">
                 <i class="fa fa-trash-o fa-4x btn-danger"></i>
-                <span i18n="clearStorage" class="main-activity-link"></span>
+                <span translate class="main-activity-link">Clear Storage</span>
             </a>
         </div>
 
