--- a/app/views/home/partials/stock-count-reminder.html
+++ b/app/views/home/partials/stock-count-reminder.html
@@ -2,7 +2,7 @@
   <a ga-click="stock_count_form" ui-sref="stockCountForm">
     <div class="col-md-12 alert alert-warning">
       <img src="images/dashboard-icons/add-stock-count.png" class="img-rounded"/>
-      <strong><span i18n="stockCountReminderMsg"></span></strong>
+      <strong><span translate>A stock count is due today!</span></strong>
     </div>
   </a>
 </div>
