--- a/app/views/home/settings.html
+++ b/app/views/home/settings.html
@@ -1,17 +1,17 @@
 <div>
   <ul class="nav nav-pills">
     <li ui-sref-active="active">
-      <a ui-sref="home.index.settings.facility" ga-click="settings_facility" i18n="facility"></a>
+      <a ui-sref="home.index.settings.facility" ga-click="settings_facility" translate>Facility</a>
     </li>
     <li ui-sref-active="active">
-      <a ui-sref="home.index.settings.inventory" ga-click="settings_inventory" i18n="inventory"></a>
+      <a ui-sref="home.index.settings.inventory" ga-click="settings_inventory" translate>Inventory</a>
     </li>
   </ul>
 </div>
 
 <div class="row" ui-view></div>
 <div class="pull-right">
-  <button class="btn btn-default" ga-click="settings_reset" i18n="reset" />
+  <button class="btn btn-default" ga-click="settings_reset" translate>Reset</button>
   <button type="submit" ga-click="settings_submit" class="btn btn-success"
-    i18n="submit" ng-click="save(settings)" />
+    translate ng-click="save(settings)">Submit</button>
 </div>
