--- a/app/views/index/footer.html
+++ b/app/views/index/footer.html
@@ -2,11 +2,11 @@
   <div class="container">
     <small class="text-muted">
       <span ng-bind="'© ' + year"></span>
-      <span i18n="appAuthor"></span>
+      <span>eHealth Systems Africa Foundation</span>
       <span class="pull-right" ng-bind="'v' + version"></span>
       <nav role="navigation">
         <ul class="list-inline">
-          <li><a ui-sref="contact" i18n="contactUs"></a></li>
+          <li><a ui-sref="contact" translate>Contact us</a></li>
         </ul>
       </nav>
     </small>
