--- a/app/views/inventory/forms/partials/add-form.html
+++ b/app/views/inventory/forms/partials/add-form.html
@@ -15,10 +15,10 @@
                 <div class="col-sm-12">
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label for="sendingFacility" i18n="sendingFacility"></label>
+                      <label for="sendingFacility" translate>Sending Facility</label>
                       <select id="sendingFacility" class="form-control" ng-model="inventory.sending_facility"
                               ng-change="createSendingFacilityObj(inventory)" required>
-                        <option value="" i18n="selectSendingFacility"></option>
+                        <option value="" translate>Select sending facility</option>
                         <option ng-repeat="facility in facilities" value="{{ facility }}"
                                 ng-bind="facility.name"></option>
                       </select>
@@ -27,7 +27,7 @@
 
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label for="receivingFacility" i18n="receivingFacility"></label>
+                      <label for="receivingFacility" translate>Receiving Facility</label>
                       <input class="form-control" type="text" name="receivingFacility" id="receivingFacility"
                              ng-model="(inventory.receiving_facility).name" ng-disabled="true"/>
                     </div>
@@ -35,7 +35,7 @@
 
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label for="bundleNo" i18n="bundleNo"></label>
+                      <label for="bundleNo" translate>Bundle No.</label>
                       <input class="form-control" type="text" name="bundleNo" id="bundleNo"
                              ng-model="inventory.bundle_no" placeholder="e.g KNC-THF-01-9803" required/>
                     </div>
@@ -43,7 +43,7 @@
 
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label for="receiptDate" i18n="dateReceived"></label>
+                      <label for="receiptDate" translate>Date Received</label>
                       <input ng-model="inventory.date_receipt" class="form-control" type="date" name="receiptDate"
                              id="receiptDate" required/>
                     </div>
@@ -83,7 +83,7 @@
           <div class="col-md-4 pull-right">
             <button ng-click="inventory.showForm = false" type="button" id="save" name="save"
                     class="btn btn-success">
-              <span i18n="save"></span>
+              <span translate>Save</span>
               <i class="fa fa-save"></i>
             </button>
           </div>
