--- a/app/views/inventory/forms/partials/add-inventory-line.html
+++ b/app/views/inventory/forms/partials/add-inventory-line.html
@@ -9,10 +9,10 @@
   <div class="panel-body">
     <div class="col-sm-12">
       <div class="col-sm-4">
-        <label i18n="productTypes"></label>
+        <label translate>Product Types</label>
         <select ng-model="inventoryLine.productType" class="form-control"
                 ng-change="loadProductTypeBatches(inventoryLine)">
-          <option value="" i18n="selectProductType"></option>
+          <option value="" translate>Select product type</option>
           <option ng-repeat="type in inventoryLine.productTypes" value="{{ type }}"
                   ng-selected="{{ (inventoryLine.productType).uuid === type.uuid}}"
                   ng-bind="type.name">
@@ -21,12 +21,12 @@
       </div>
 
       <div class="col-sm-4">
-        <label i18n="batchNo"></label>
+        <label translate>Batch No</label>
         <select ng-show="(inventoryLine.productTypeBatches).length !== 0" ng-model="inventoryLine.selectedBatch"
                 class="form-control"
                 ng-change="updateBatchNo(inventoryLine)"
                 ng-disabled="inventoryLine.isDisabled">
-          <option value="" i18n="selectBatch"></option>
+          <option value="" translate>Select batch</option>
           <option ng-repeat="batch in inventoryLine.productTypeBatches" value="{{ batch.uuid }}"
                   ng-bind="batch.batch_no">
           </option>
@@ -37,9 +37,9 @@
       </div>
 
       <div class="col-sm-4">
-        <label i18n="program"></label>
+        <label translate>Program</label>
         <select ng-model="inventoryLine.program" class="form-control" ng-change="createProgramObj(inventoryLine)">
-          <option value="" i18n="selectProgram"></option>
+          <option value="" translate>Select program</option>
           <option ng-repeat="program in programs" value="{{ program }}"
                   ng-selected="{{ (inventoryLine.program).uuid === program.uuid}}"
                   ng-bind="program.name"></option>
@@ -51,23 +51,23 @@
   <div class="panel-body">
     <div class="col-sm-12">
       <div class="col-sm-4">
-        <label i18n="uom"></label>
+        <label translate>Unit of measurement</label>
         <select class="form-control" ng-model="inventoryLine.uom" ng-change="createUOMObj(inventoryLine)" required>
-          <option value="" i18n="selectUOM"></option>
+          <option value="" translate>Select unit of measurement</option>
           <option ng-repeat="uom in uomList" value="{{ uom }}" ng-bind="uom.name"
                   ng-selected="{{ (inventoryLine.uom).uuid === uom.uuid }}"></option>
         </select>
       </div>
 
       <div class="col-sm-4">
-        <label i18n="quantity"></label>
+        <label translate>Quantity</label>
         <counter bind="inventoryLine.quantity"></counter>
       </div>
 
       <div class="col-sm-4">
-        <label i18n="storageUnit"></label>
+        <label translate>Storage Unit</label>
         <select class="form-control" ng-model="inventoryLine.storage_unit" ng-change="createStorageUnitObj(inventoryLine)">
-          <option value="" i18n="addToStorageUnit"></option>
+          <option value="" translate>Add to storage unit</option>
           <option ng-repeat="storageUnit in receivingFacilityStorageUnits"
                   value="{{ storageUnit }}"
                   ng-selected="{{ (inventoryLine.storageUnit).uuid === storageUnit.uuid }}"
