--- a/app/views/inventory/partials/preview-add-inventory.html
+++ b/app/views/inventory/partials/preview-add-inventory.html
@@ -14,28 +14,28 @@
                 <div class="col-sm-12">
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label i18n="sendingFacility"></label>
+                      <label translate>Sending Facility</label>
                       <span class="new-line" ng-bind="(inventory.sendingFacilityObj).name"></span>
                     </div>
                   </div>
 
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label i18n="receivingFacility"></label>
+                      <label translate>Receiving Facility</label>
                       <span class="new-line" ng-bind="(inventory.receiving_facility).name"></span>
                     </div>
                   </div>
 
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label i18n="bundleNo"></label>
+                      <label translate>Bundle No</label>
                       <span class="new-line" ng-bind="inventory.bundle_no"></span>
                     </div>
                   </div>
 
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label i18n="dateReceived"></label>
+                      <label translate>Date Received</label>
                       <span class="new-line" ng-bind="(inventory.date_receipt | date: 'dd MMMM, yyyy')"></span>
                     </div>
                   </div>
@@ -67,13 +67,14 @@
           <div class="col-md-4 pull-left">
             <div class="btn-group col-sm-3">
             <span ng-click="inventory.showForm = true" class="btn btn-default">
-              <i class="fa fa-chevron-circle-left"></i>Back</span>
+              <i class="fa fa-chevron-circle-left"></i>
+              <span translate>Back</span>
             </div>
           </div>
 
           <div class="col-md-4 pull-right">
             <button type="button" ng-click="confirm()" id="confirm" name="confirm" class="btn btn-success">
-              <span i18n="confirm"></span>
+              <span translate>Confirm</span>
             </button>
           </div>
         </div>
