--- a/app/views/inventory/partials/preview-inventory-line.html
+++ b/app/views/inventory/partials/preview-inventory-line.html
@@ -9,17 +9,17 @@
   <div class="panel-body">
     <div class="col-sm-12">
       <div class="col-sm-4">
-        <label i18n="productTypes"></label>
+        <label translate>Product Types</label>
         <span class="new-line" ng-bind="(inventoryLine.productTypeObj).name"></span>
       </div>
 
       <div class="col-sm-4">
-        <label i18n="batchNo"></label>
+        <label translate>Batch No</label>
         <span class="new-line" ng-bind="inventoryLine.batch_no"></span>
       </div>
 
       <div class="col-sm-4">
-        <label i18n="program"></label>
+        <label translate>Program</label>
         <span class="new-line" ng-bind="(inventoryLine.programObj).name"></span>
       </div>
     </div>
@@ -28,17 +28,17 @@
   <div class="panel-body">
     <div class="col-sm-12">
       <div class="col-sm-4">
-        <label i18n="quantity"></label>
+        <label translate>Quantity</label>
         <span class="new-line" ng-bind="inventoryLine.quantity"></span>
       </div>
 
       <div class="col-sm-4">
-        <label i18n="uom"></label>
+        <label translate>Unit of measurement</label>
         <span class="new-line" ng-bind="(inventoryLine.uomObj).name"></span>
       </div>
 
       <div class="col-sm-4">
-        <label i18n="storageUnit"></label>
+        <label translate>Storage Unit</label>
         <span class="new-line" ng-bind="(inventoryLine.storageUnitObj).name"></span>
       </div>
     </div>
