--- a/app/views/orders/forms/place.html
+++ b/app/views/orders/forms/place.html
@@ -2,7 +2,7 @@
 <fieldset>
 
   <div class="form-group">
-    <label class="col-md-4 control-label" for="receivingFacilityName" i18n="receivingFacilityName"></label>
+    <label class="col-md-4 control-label" for="receivingFacilityName" translate>Receiving Facility Name</label>
     <div class="col-md-4">
       <select id="receivingFacilityName" name="receivingFacilityName"
         class="form-control" ng-model="order.receivingFacility">
@@ -13,7 +13,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-md-4 control-label" for="childFacilityCode" i18n="childFacilityCode"></label>
+    <label class="col-md-4 control-label" for="childFacilityCode" translate>Child Facility Code</label>
     <div class="col-md-4">
       <input id="childFacilityCode" name="childFacilityCode" type="text" disabled
         ng-model="storage.facilities[order.receivingFacility].code"
@@ -22,7 +22,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-md-4 control-label" for="parentFacilityName" i18n="parentFacilityName"></label>
+    <label class="col-md-4 control-label" for="parentFacilityName" translate>Parent Facility Name</label>
     <div class="col-md-4">
       <select id="parentFacilityName" name="parentFacilityName"
         class="form-control" ng-model="order.parentFacility">
@@ -33,7 +33,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-md-4 control-label" for="parentFacilityCode" i18n="parentFacilityCode"></label>
+    <label class="col-md-4 control-label" for="parentFacilityCode" translate>Parent Facility Code</label>
     <div class="col-md-4">
       <input id="parentFacilityCode" name="parentFacilityCode" disabled
         type="text" class="form-control input-md" required
@@ -42,7 +42,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-md-4 control-label" for="userCode" i18n="userCode"></label>
+    <label class="col-md-4 control-label" for="userCode" translate>User Code</label>
     <div class="col-md-4">
       <input id="userCode" name="userCode" type="text" class="form-control input-md"
         required disabled ng-model="order.userCode">
@@ -50,7 +50,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-md-4 control-label" for="orderNumber" i18n="orderNumber"></label>
+    <label class="col-md-4 control-label" for="orderNumber" translate>Order Number</label>
     <div class="col-md-4">
       <input id="orderNumber" name="orderNumber" type="text" required disabled
         class="form-control input-md" ng-model="order.number">
@@ -58,7 +58,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-md-4 control-label" for="orderDate" i18n="orderDate"></label>
+    <label class="col-md-4 control-label" for="orderDate" translate>Order Date</label>
     <div class="col-md-4">
       <input id="orderDate" name="orderDate" type="date" class="form-control input-md" required ng-model="order.date">
     </div>
@@ -68,7 +68,7 @@
     <accordion close-others="true">
       <accordion-group ng-repeat="product in order.products" is-open="true">
         <accordion-heading>
-          <span i18n="productID"></span>
+          <span translate>Product ID</span>
           <i ng-click="removeProduct(product)"
             class="pull-right text-muted fa fa-times fa-2x"></i>
         </accordion-heading>
@@ -77,17 +77,17 @@
     </accordion>
     <button name="addProduct" class="btn btn-default" ng-click="addProduct()">
       <span><i class="fa fa-plus"></i></span>
-      <span i18n="addProduct"></span>
+      <span translate>Add Product</span>
     </button>
   </div>
 
   <div class="form-group">
     <div class="col-md-4 pull-right">
       <button id="authorize" name="authorize" class="btn btn-default"
-        ng-disabled="authorized" i18n="authorize"
-        ng-click="authorized=true"></button>
+        ng-disabled="authorized" translate
+        ng-click="authorized=true">Authorize</button>
       <button id="submit" name="submit" class="btn btn-success"
-        i18n="submit" ng-disabled="!authorized"></button>
+        translate ng-disabled="!authorized">Submit</button>
     </div>
   </div>
 
