--- a/app/views/survey/take-survey.html
+++ b/app/views/survey/take-survey.html
@@ -14,12 +14,12 @@
             <label class="input-control">
               <input ng-model="surveyResponse[question.uuid]" type="radio" name="{{ question.uuid }}" ng-value="true"
                      ng-change="newValue(question.uuid, true)"/>
-              <span i18n="yes"></span>
+              <span translate>Yes</span>
             </label>
             <label class="input-control">
               <input ng-model="surveyResponse[question.uuid]" type="radio" name="{{ question.uuid }}" ng-value="false"
                      ng-change='newValue(question.uuid, false)'>
-              <span i18n="no"></span>
+              <span translate>No</span>
             </label>
           </div>
           <div class="panel-body"></div>
@@ -30,15 +30,15 @@
         <div class="btn-group btn-group-justified">
           <div class="btn-group">
             <button type="button" ga-click="survey_submit" class="btn btn-default btn-lg btn-left" ng-click="clear()" ng-disabled="isSaving">
-              <span i18n="clear"></span>
+              <span translate>Clear</span>
               <span><i class="fa fa-refresh"></i></span>
             </button>
           </div>
           <div class="btn-group">
             <button type="submit" ga-click="survey_save" class="btn btn-success btn-lg btn-right" ng-click="save()" ng-disabled="isSaving">
-              <span ng-show="!isSaving" i18n="save"></span>
+              <span ng-show="!isSaving" translate>Save</span>
               <span ng-show="!isSaving"><i class="fa fa-floppy-o"></i></i></span>
-              <span ng-show="isSaving" i18n="saving"></span>
+              <span ng-show="isSaving" translate>Saving</span>
               <span ng-show="isSaving"><i class="fa fa-spinner fa-spin"></i></span>
             </button>
           </div>
