--- a/app/views/waste-count/waste-count-form2.html
+++ b/app/views/waste-count/waste-count-form2.html
@@ -77,17 +77,17 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="form-group">
-          <label i18n="selectProductType"></label>
+          <label translate>Select product type</label>
           <select ng-change="loadSelected()" ng-model="productKey" class="form-control">
-            <option value="" i18n="selectProductType"></option>
+            <option value="" translate>Select product type</option>
             <option value="{{ product.uuid }}" ng-repeat="product in facilityProducts"> {{ product.name }}</option>
           </select>
         </div>
 
         <div class="form-group" ng-show="productKey">
-          <label i18n="selectWasteReason"></label>
+          <label translate>Select Waste Reason</label>
           <select ng-change="loadSelected()" ng-model="selectedReason" class="form-control">
-            <option value="" i18n="selectWasteReason"></option>
+            <option value="" translate>Select Waste Reason</option>
             <option value="{{ $index }}" ng-repeat="reason in wasteReasons"> {{ reason }}</option>
           </select>
         </div>
